--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Flatdoc -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
     <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
+
+
     <script>
       Flatdoc.run({
         fetcher: Flatdoc.github('Uni-Marburg-IGS-Statistik/Statistik-f-r-Sprachwissenschaftler','README.md')
@@ -32,7 +34,7 @@
 	<h3>Sommersemester 2014</h3>
 
         <p class="view"><a href="https://github.com/Uni-Marburg-IGS-Statistik/Statistik-f-r-Sprachwissenschaftler">View the Project on GitHub <small>Uni-Marburg-IGS-Statistik/Statistik-f-r-Sprachwissenschaftler</small></a></p>
-
+	
       </header>
       <section>
 
