flatdoc default theme

--- a/index.html
+++ b/index.html
@@ -1,51 +1,45 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Statistik für Sprachwissenschaftler by Uni-Marburg-IGS-Statistik</title>
+<head>
+  <meta charset='utf-8'>
+  <title>Statistik für Sprachwissenschaftler</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <!-- Flatdoc -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
+  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <!-- Flatdoc theme -->
+  <link  href='http://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/style.css' rel='stylesheet'>
+  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/script.js'></script>
 
-    <!-- Flatdoc -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
-    <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
-
-
-    <script>
-      Flatdoc.run({
+  <!-- Initializer -->
+  <script>
+    Flatdoc.run({
         fetcher: Flatdoc.github('Uni-Marburg-IGS-Statistik/Statistik-f-r-Sprachwissenschaftler','README.md')
-      });
-    </script>
-
-
-  </head>
-  <body role='flatdoc'>
-    <div class="wrapper">
-      <header>
-        <h1>Statistik für Sprachwissenschaftler</h1>
-        <h2>Phillip Alday</h2>
-	<h3>Sommersemester 2014</h3>
-
-        <p class="view"><a href="https://github.com/Uni-Marburg-IGS-Statistik/Statistik-f-r-Sprachwissenschaftler">View the Project on GitHub <small>Uni-Marburg-IGS-Statistik/Statistik-f-r-Sprachwissenschaftler</small></a></p>
-	
-      </header>
-      <section>
-
-      <div role='flatdoc-content'></div>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/Uni-Marburg-IGS-Statistik">Uni-Marburg-IGS-Statistik</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+    });
+  </script>
+</head>
+<body role='flatdoc' class='no-literate large-brief'>
+ <!--
+  <div class='header'>
+    <div class='left'>
+      
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+  </div>
+-->
+  <div class='content-root'>
+    <div class='menubar'>
+	<div class='section' >
+	<h1 style='font-size:160%'><a href="index.html">Statistik für Sprachwissenschaftler</a></h1>
+        <h2 style='font-size:140%'>Sommersemester 2014</h2>
+	<h3 style='font-size:120%'>Phillip Alday</h3>
+        </div>
+      <div class='menu section' role='flatdoc-menu'></div>
+    </div>
+    <div role='flatdoc-content' class='content'></div>
+  </div>
+
+</body>
 </html>
+
