--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   </script>
 </head>
 <body role='flatdoc' class='no-literate large-brief'>
- <!--
   <div class='header'>
     <div class='left'>
-      
+    <ul>
+      <li><a href=hausaufgaben.html>Hinweise zu den Hausaufgaben</a></li>
+    </ul>  
     </div>
   </div>
--->
   <div class='content-root'>
     <div class='menubar'>
 	<div class='section' >
