--- a/rbasics.html
+++ b/rbasics.html
@@ -5,13 +5,13 @@
   <title>Statistik für Sprachwissenschaftler</title>
 
   <!-- Flatdoc -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src='https://rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
+  <script src='https://rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
 
   <!-- Flatdoc theme -->
-  <link  href='http://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/style.css' rel='stylesheet'>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/script.js'></script>
+  <link  href='https://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/style.css' rel='stylesheet'>
+  <script src='https://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/script.js'></script>
 
   <!-- MathJax -->
   <!-- enable single dollar signs -->
