protocol neutral loading of externals

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>Statistik für Sprachwissenschaftler</title>
 
   <!-- Flatdoc -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src='//rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
+  <script src='//rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
 
   <!-- Flatdoc theme -->
-  <link  href='http://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/style.css' rel='stylesheet'>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/script.js'></script>
+  <link  href='//rstacruz.github.io/flatdoc/v/0.8.1/theme-white/style.css' rel='stylesheet'>
+  <script src='//rstacruz.github.io/flatdoc/v/0.8.1/theme-white/script.js'></script>
 
   <!-- Initializer -->
   <script>
