--- a/rbasics.html
+++ b/rbasics.html
@@ -5,13 +5,13 @@
   <title>Statistik für Sprachwissenschaftler</title>
 
   <!-- Flatdoc -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src='https://rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
-  <script src='https://rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src='//rstacruz.github.io/flatdoc/v/0.8.1/legacy.js'></script>
+  <script src='//rstacruz.github.io/flatdoc/v/0.8.1/flatdoc.js'></script>
 
   <!-- Flatdoc theme -->
-  <link  href='https://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/style.css' rel='stylesheet'>
-  <script src='https://rstacruz.github.io/flatdoc/v/0.8.1/theme-white/script.js'></script>
+  <link  href='//rstacruz.github.io/flatdoc/v/0.8.1/theme-white/style.css' rel='stylesheet'>
+  <script src='//rstacruz.github.io/flatdoc/v/0.8.1/theme-white/script.js'></script>
 
   <!-- MathJax -->
   <!-- enable single dollar signs -->
@@ -21,7 +21,7 @@
   });
   </script>
   <script type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   
   <!-- Initializer -->
