--- a/rbasics.html
+++ b/rbasics.html
@@ -33,6 +33,9 @@
   
 </head>
 <body role='flatdoc' class='large-brief big-h3'>
+  <div class='title-area title-card' style='background-image: url(img/iheartr.png); max-height: 335px; max-width: 1180px;'>
+  </div>
+
   <div class='header'>
     <div class='left'>
     <ul>
