change text to match toggle

--- a/rbasics.html
+++ b/rbasics.html
@@ -52,7 +52,8 @@
 	      <h3 style='font-size:120%'>Phillip Alday</h3>
     </div>
     <div class='section' >
-      <a class='big button' onClick="$('body').toggleClass('no-literate')">Toggle Code Position</a>
+      <h2 style='font-size:120%'>Platzierung von Beispielen ändern auf</h2> </br>
+      <a class='big button' onClick="$('body').toggleClass('no-literate');  this.innerHTML = $('body').hasClass('no-literate') ? 'Side-By-Side' : 'Inline'">Inline</a>
     </div>
     <div class='menu section' role='flatdoc-menu'></div>
     </div>
