--- a/rbasics.html
+++ b/rbasics.html
@@ -31,6 +31,12 @@
     });
   </script>
   
+  <style type="text/css">
+  .content h2 {
+    text-transform: none;
+  }
+  </style>
+  
 </head>
 <body role='flatdoc' class='large-brief big-h3'>
   <div class='title-area title-card' style='background-image: url(img/iheartr.png); max-height: 335px; max-width: 1180px;'>
