added exam page

--- a/linkbar.html
+++ b/linkbar.html
@@ -1,4 +1,5 @@
     <ul>
       <li><a href=hausaufgaben.html>Hinweise zu den Hausaufgaben</a></li>
+      <li><a href=pruefung.html>Hinweise zur Prüfung</a></li>
       <li><a href=rbefehle.html>R Befehle</a></li>
     </ul>
