--- a/pruefung.html
+++ b/pruefung.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Statistik für Sprachwissenschaftler</title>
+  <title>Statistik für Sprachwissenschaftler: Hinweise zur Prüfung</title>
 
   <!-- Flatdoc -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
