--- a/linkbar.html
+++ b/linkbar.html
@@ -1,6 +1,6 @@
     <ul>
       <li><a href=hausaufgaben.html>Hinweise zu den Hausaufgaben</a></li>
       <li><a href=pruefung.html>Hinweise zur Prüfung</a></li>
-      <li><a href=ftestundfreiheitsgrade.html>Freiheitsgrade beim $F$-Test </a></li>
+      <li><a href=ftestundfreiheitsgrade.html>Freiheitsgrade beim F-Test </a></li>
       <li><a href=rbefehle.html>R Befehle</a></li>
     </ul>
