--- a/rbefehle.html
+++ b/rbefehle.html
@@ -21,7 +21,7 @@
   });
   </script>
   <script type="text/javascript"
-  src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 
   <!-- Initializer -->
