moved rbefehle to shared linkbar

--- a/rbefehle.html
+++ b/rbefehle.html
@@ -48,11 +48,7 @@
   </div>
 
   <div class='header'>
-    <div class='left'>
-    <ul>
-      <li><a href=hausaufgaben.html>Hinweise zu den Hausaufgaben</a></li>
-      <li><a href=rbefehle.html>R Befehle</a></li>
-    </ul>
+    <div class='left' id="linkbar">
     </div>
   </div>
   <div class='content-root'>
