--- a/pruefung.html
+++ b/pruefung.html
@@ -34,6 +34,10 @@
     $(function(){
       $("#linkbar").load("linkbar.html");
     });
+    $(document).on('flatdoc:ready', function() {
+      // rerender MathJax when the document is loaded
+      MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
+    });
    </script>
 </head>
 
