--- a/linkbar.html
+++ b/linkbar.html
@@ -2,7 +2,7 @@
       <li><a href=hausaufgaben.html>Hinweise zu den Hausaufgaben</a></li>
       <li><a href=pruefung.html>Hinweise zur Prüfung</a></li>
       <li><a href=ftestundfreiheitsgrade.html>Freiheitsgrade beim F-Test </a></li>
-      <li><a href=Stichprobe und Population.html>Formeln</a></li>
+      <li><a href=population-v-stichprobe.html>Population v. Stichprobe</a></li>
       <li><a href=formeln.html>Formeln</a></li>
       <li><a href=rbefehle.html>R Befehle</a></li>
     </ul>
