--- a/formeln.html
+++ b/formeln.html
@@ -17,7 +17,7 @@
   <!-- enable single dollar signs -->
   <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
-    tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+    tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMath: [['$$','$$']]}
   });
   </script>
   <script type="text/javascript"
